# boundedcuts

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  pep517_helper.py  pyproject.toml
.github/workflows/: build.yml  wheels.yml
exact_solver/: CMakeLists.txt  README.md  bindings.cpp  canonical_ownership.cpp  canonical_ownership.hpp  checkpoint.cpp  checkpoint.hpp  checkpoint_v2.cpp  clarabel_sdp_adapter.cpp  clarabel_sdp_adapter.hpp  conanfile.py  decision.cpp  decision.hpp  decision_cache.cpp  decision_cache.hpp  decision_session.cpp  decision_session.hpp  decomposition.cpp  decomposition.hpp  delta_bucket_candidate_index.hpp  drat_trim_impl.c  fake_tool.cpp  global_dfs_executor.cpp  global_dfs_executor.hpp  graph.cpp  graph.hpp  incremental_layout.cpp  incremental_layout.hpp  incumbent_session.cpp  incumbent_session.hpp  lagrangian_bound.cpp  lagrangian_bound.hpp  local_continuation_bound.hpp  main.cpp  memory_governor.cpp  memory_governor.hpp  milp_adapter.cpp  milp_adapter.hpp  node_memo.cpp  node_memo.hpp  (+65 more)
exact_solver/msvc_compat/: cadical_msvc.hpp  unistd.h
examples/: triangle.edgelist
src/boundedcuts/: __init__.py  cli.py  proof_tools.json
tests_python/: test_boundedcuts.py
tools/: README.md  bootstrap_clarabel_cpp.sh  bootstrap_clarabel_windows.ps1  bootstrap_pb_sat.sh  bootstrap_pb_sat_windows.ps1  bootstrap_wheel_pb_sat.sh  clarabel_cpp_cbindgen_pin.patch
