[build-system]
requires = [
    "conan==2.30.0",
    "nanobind==2.13.0",
    "scikit-build-core==1.0.3",
]
build-backend = "pep517_helper"
backend-path = ["."]

[project]
name = "boundedcuts"
version = "0.1.0"
description = "A modern certifying cutwidth solver"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "BoundedCuts contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.23.5"]

[project.urls]
Homepage = "https://github.com/meghanto/boundedcuts"
Repository = "https://github.com/meghanto/boundedcuts"
Issues = "https://github.com/meghanto/boundedcuts/issues"

[project.scripts]
boundedcuts = "boundedcuts.cli:main"
cutwidth-exact = "boundedcuts.cli:main"

[tool.scikit-build]
minimum-version = "1.0"
cmake.version = ">=3.20"
cmake.build-type = "Release"
wheel.packages = ["src/boundedcuts"]
wheel.license-files = ["LICENSE"]
sdist.include = [
    "CMakeLists.txt",
    "LICENSE",
    "README.md",
    "THIRD_PARTY_NOTICES.md",
    "exact_solver/**",
    "pep517_helper.py",
    "src/boundedcuts/**",
    "tests_python/**",
    "tools/bootstrap_wheel_pb_sat.sh",
    "tools/bootstrap_pb_sat_windows.ps1",
]
